# faserMC

./: .gitignore  CMakeLists.orig  CMakeLists.txt  README  README.md  buildFaser.sh  faser.cc  faserDigi.mac  faserGeo.mac  faserGeo_SCT.mac  faserPhys.mac  faserPhysMinIon.mac  faserPhysicsList.mac  init_novis.mac  init_vis.mac  make.sh  setUpEnvironment.sh  setupLCG.sh  vis.mac
faserMC/: CMakeLists.txt  faser.cc  faserDigi.mac  faserGeo.mac  faserGeoCalo.mac  faserGeoCaloPb.mac  faserGeoCaloPbC.mac  faserGeoCaloPbCu.mac  faserGeoNoCalo.mac  faserGeo_ITk.mac  faserGeo_SCT.mac  faserPhys.mac  faserPhys_muPlus.mac  faserPhysicsList.mac  init_minion.mac  init_novis.mac  init_novis_Calo.mac  init_novis_CaloPb.mac  init_novis_CaloPbC.mac  init_novis_CaloPbCu.mac  init_novis_NoCalo.mac  init_vis.mac  vis.mac
faserMC/include/: FaserActionInitialization.hh  FaserCaloDigi.hh  FaserCaloHit.hh  FaserCaloSD.hh  FaserCircleFit.hh  FaserCluster.hh  FaserDetectorConstruction.hh  FaserDigi.hh  FaserDigiMessenger.hh  FaserDrawer.hh  FaserEvent.hh  FaserEventAction.hh  FaserEventInformation.hh  FaserFieldMessenger.hh  FaserGeometryMessenger.hh  FaserRootClasses.hh  FaserRun.hh  FaserRunAction.hh  FaserSamplerHit.hh  FaserSamplerSD.hh  FaserSensorHit.hh  FaserSensorPlaneConstruction.hh  FaserSpacePoint.hh  FaserStackingAction.hh  FaserTrackInformation.hh  FaserTrackerClasses.hh  FaserTrackerCluster.hh  FaserTrackerDigit.hh  FaserTrackerEvent.hh  FaserTrackerGeometry.hh  FaserTrackerSpacePoint.hh  FaserTrackerTruthHit.hh  FaserTrackerTruthParticle.hh  FaserTruthParticle.hh  FaserVisAction.hh  RootEventIO.hh  RootIO.hh
faserMC/root/: initFaser.C
faserMC/src/: FaserActionInitialization.cc  FaserCaloDigi.cc  FaserCaloDigitizer.cc  FaserCaloHit.cc  FaserCaloSD.cc  FaserCircleFit.cc  FaserCluster.cc  FaserDarkPhoton.cc  FaserDetectorConstruction.cc  FaserDigi.cc  FaserDigiMessenger.cc  FaserDigitizer.cc  FaserDrawer.cc  FaserEvent.cc  FaserEventAction.cc  FaserEventInformation.cc  FaserGeneratorMessenger.cc  FaserGeometry.cc  FaserPhysicsList.cc  FaserPhysicsMessenger.cc  FaserRun.cc  FaserRunAction.cc  FaserSamplerHit.cc  FaserSensorHit.cc  FaserSensorPlaneConstruction.cc  FaserSpacePoint.cc  FaserStackingAction.cc  FaserSteppingAction.cc  FaserTrackInformation.cc  FaserTrackerCluster.cc  FaserTrackerDigit.cc  FaserTrackerGeometry.cc  FaserTrackerSpacePoint.cc  FaserTrackingAction.cc  FaserTruthParticle.cc  FaserVisAction.cc  RootEventIO.cc  RootIO.cc
faserMC/xml/: selection.xml  tracker_selection.xml
include/: FaserCaloDigitizer.hh  FaserCaloHit.hh  FaserCluster.hh  FaserDarkPhoton.hh  FaserDetectorConstruction.hh  FaserDigi.hh  FaserDigiMessenger.hh  FaserDigitizer.hh  FaserEvent.hh  FaserEventAction.hh  FaserFieldMessenger.hh  FaserFieldSetup.hh  FaserGeneratorMessenger.hh  FaserGeometry.hh  FaserGeometryMessenger.hh  FaserPhysicsList.hh  FaserPhysicsMessenger.hh  FaserPrimaryGenerator.hh  FaserPrimaryGeneratorAction.hh  FaserRootClasses.hh  FaserRunAction.hh  FaserSensorHit.hh  FaserSensorSD.hh  FaserSpacePoint.hh  FaserStackingAction.hh  FaserSteppingAction.hh  FaserTrackInformation.hh  FaserTrackerGeometry.hh  FaserTrackingAction.hh  FaserTruthParticle.hh  RootEventIO.hh  RootIO.hh
root/: FaserCluster.C  FaserSamplerCluster.C  initFaser.C  readSampler.C  readTree.C
src/: FaserActionInitialization.cc  FaserCaloDigi.cc  FaserCaloHit.cc  FaserCaloSD.cc  FaserCluster.cc  FaserDetectorConstruction.cc  FaserDigi.cc  FaserDigiMessenger.cc  FaserDigitizer.cc  FaserDrawer.cc  FaserEvent.cc  FaserEventAction.cc  FaserFieldMessenger.cc  FaserFieldSetup.cc  FaserGeneratorMessenger.cc  FaserGeometry.cc  FaserGeometryMessenger.cc  FaserPhysicsList.cc  FaserPrimaryGenerator.cc  FaserPrimaryGeneratorAction.cc  FaserRunAction.cc  FaserSamplerSD.cc  FaserSensorHit.cc  FaserSensorPlaneConstruction.cc  FaserSensorSD.cc  FaserSpacePoint.cc  FaserStackingAction.cc  FaserSteppingAction.cc  FaserTrackInformation.cc  FaserTrackerTruthHit.cc  FaserTrackerTruthParticle.cc  FaserTrackingAction.cc  RootEventIO.cc  RootIO.cc
xml/: selection.xml
